Fixed Title generator, Scripts versions and z-index fixes

--- a/theme/plekvetica/scss/forms.scss
+++ b/theme/plekvetica/scss/forms.scss
@@ -134,7 +134,7 @@ input[type=checkbox]{
   position: absolute;
   background-color: $color-gray-light;
   max-width: 755px;
-  z-index: 10000;
+  z-index: 9998;
   margin-right: 40px;
   width: 100%;
 }
